src/index.css
/*Menu section*/
.Menu-Dropdown-Button {
  background-color: white;
  color: black;
  padding: 20px;
  font-size: 16px;
  border: none;
}

.Menu-Dropdown-Wrapper {
  position: relative;
  display: inline-block;
  border: 1px solid pink;
}

.Menu-Dropdown-List {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.Menu-Dropdown-Item {
  color: black;
  text-decoration: none;
  padding: 12px;
  display: block;
}

.Menu-Dropdown-Wrapper:hover .Menu-Dropdown-List {
  display: block;
}

/*logo*/
#projectLogo {
  width: 40px;
  height: 40px;
}

.carousel div {
  margin: auto;
}

/*carousel*/
.columns {
  display: flex;
  justify-content: space-around;
}



/*powered by segment*/
.poweredBy-outer {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #c29ae6
}

.poweredBy-inner {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.poweredBy-element {
  border: 1px dotted pink;
}

/*AboutUs segment*/
.about-outer {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #c3c9eb
}

.about-inner {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.about-element {
  border: 1px dotted pink;
  margin: 30px;
}


/*snapping elements*/
.snap-container {
  scroll-snap-type: y proximity;
  overflow: scroll;
  height: 100vh;
}

.snap-child {
  height: 100vh;
  scroll-snap-align: start;
}

